@@ -699,8 +699,8 @@
 #define ENABLE_NOTIFY_FILTERING 1
 #endif
 
-#if !defined(ENABLE_APP_PRIVACY_REPORT) && PLATFORM(IOS_FAMILY) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 150000
-#define ENABLE_APP_PRIVACY_REPORT 1
+#if !defined(ENABLE_APP_BOUND_REQUESTS) && PLATFORM(IOS_FAMILY) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 150000
+#define ENABLE_APP_BOUND_REQUESTS 1
 #endif
 
 #if !defined(ENABLE_DESTINATION_COLOR_SPACE_DISPLAY_P3)
