@@ -33,7 +33,6 @@
 #import "TestURLSchemeHandler.h"
 #import "TestWKWebView.h"
 #import "WKWebViewConfigurationExtras.h"
-#import <Foundation/NSURLRequest.h>
 #import <WebCore/RegistrableDomain.h>
 #import <WebCore/RuntimeApplicationChecks.h>
 #import <WebKit/WKHTTPCookieStorePrivate.h>
@@ -44,9 +43,12 @@
 #import <WebKit/WKWebsiteDataStorePrivate.h>
 #import <WebKit/_WKUserContentWorld.h>
 #import <WebKit/_WKUserStyleSheet.h>
-#import <pal/spi/cf/CFNetworkSPI.h>
 #import <wtf/RunLoop.h>
 #import <wtf/text/WTFString.h>
+
+#if USE(APPLE_INTERNAL_SDK)
+#import <WebKitAdditions/InAppBrowserPrivacyAdditions.h>
+#endif
 
 #if ENABLE(APP_BOUND_DOMAINS)
 
@@ -1418,7 +1420,7 @@ TEST(InAppBrowserPrivacy, AboutBlankSubFrameMatchesTopFrameNonAppBound)
 
 #endif // ENABLE(APP_BOUND_DOMAINS)
 
-#if ENABLE(APP_PRIVACY_REPORT)
+#if USE(APPLE_INTERNAL_SDK) && ENABLE(APP_BOUND_REQUESTS)
 TEST(InAppBrowserPrivacy, AppBoundRequest)
 {
     auto configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
@@ -1428,10 +1430,7 @@ TEST(InAppBrowserPrivacy, AppBoundRequest)
 
     __block bool isDone = false;
     NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:url]];
-
-    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-    nonAppBoundRequest._isNonAppInitiated = YES;
-    ALLOW_DEPRECATED_DECLARATIONS_END
+    APP_BOUND_REQUEST_ADDITIONS
 
     [webView loadRequest:nonAppBoundRequest];
     [webView _test_waitForDidFinishNavigation];
@@ -1485,9 +1484,7 @@ TEST(InAppBrowserPrivacy, AppBoundRequestWithNavigation)
     
     isDone = false;
     NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:nonAppBoundURL]];
-    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-    nonAppBoundRequest._isNonAppInitiated = YES;
-    ALLOW_DEPRECATED_DECLARATIONS_END
+    APP_BOUND_REQUEST_ADDITIONS
     
     isDone = false;
     [webView _clearAppBoundNavigationData:^{
@@ -1545,9 +1542,7 @@ TEST(InAppBrowserPrivacy, NonAppBoundRequestWithSubFrame)
     __block bool isDone = false;
     auto webView = adoptNS([[TestWKWebView alloc] initWithFrame:NSMakeRect(0, 0, 800, 600) configuration:configuration.get()]);
     NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[[NSBundle mainBundle] URLForResource:@"page-with-csp" withExtension:@"html" subdirectory:@"TestWebKitAPI.resources"]];
-    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-    nonAppBoundRequest._isNonAppInitiated = YES;
-    ALLOW_DEPRECATED_DECLARATIONS_END
+    APP_BOUND_REQUEST_ADDITIONS
 
     [webView loadRequest:nonAppBoundRequest];
 
@@ -1627,9 +1622,7 @@ static void runTest(ResponseType responseType, IsAppBound appBound)
     NSURLRequest *request = server.request();
     if (appBound == IsAppBound::No) {
         NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:[NSString stringWithFormat:@"https://127.0.0.1:%d/", server.port()]]];
-        ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-        nonAppBoundRequest._isNonAppInitiated = YES;
-        ALLOW_DEPRECATED_DECLARATIONS_END
+        APP_BOUND_REQUEST_ADDITIONS
         request = nonAppBoundRequest;
     }
 
@@ -1737,9 +1730,7 @@ TEST(InAppBrowserPrivacy, MultipleWebViewsWithSharedServiceWorker)
 
     isDone = false;
     NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:[NSString stringWithFormat:@"https://127.0.0.1:%d/main.html", server.port()]]];
-    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-    nonAppBoundRequest._isNonAppInitiated = YES;
-    ALLOW_DEPRECATED_DECLARATIONS_END
+    APP_BOUND_REQUEST_ADDITIONS
     [webView2 loadRequest:nonAppBoundRequest];
     EXPECT_WK_STREQ([webView2 _test_waitForAlert], "fetched from server");
 
@@ -1789,9 +1780,7 @@ static void softUpdateTest(IsAppBound isAppBound)
         NSURLRequest *request = server1.request();
         if (isAppBound == IsAppBound::No) {
             NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:[NSString stringWithFormat:@"https://127.0.0.1:%d/", server1.port()]]];
-            ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-            nonAppBoundRequest._isNonAppInitiated = YES;
-            ALLOW_DEPRECATED_DECLARATIONS_END
+            APP_BOUND_REQUEST_ADDITIONS
             request = nonAppBoundRequest;
         }
 
@@ -1810,9 +1799,7 @@ static void softUpdateTest(IsAppBound isAppBound)
         NSURLRequest *request2 = server2.request();
         if (isAppBound == IsAppBound::No) {
             NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:[NSString stringWithFormat:@"https://127.0.0.1:%d/", server2.port()]]];
-            ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-            nonAppBoundRequest._isNonAppInitiated = YES;
-            ALLOW_DEPRECATED_DECLARATIONS_END
+            APP_BOUND_REQUEST_ADDITIONS
             request2 = nonAppBoundRequest;
         }
 
@@ -1863,9 +1850,7 @@ static void runWebProcessPlugInTest(IsAppBound isAppBound)
     NSMutableURLRequest *request = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:url]];
     if (isAppBound == IsAppBound::No) {
         NSMutableURLRequest *nonAppBoundRequest = request;
-        ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-        nonAppBoundRequest._isNonAppInitiated = YES;
-        ALLOW_DEPRECATED_DECLARATIONS_END
+        APP_BOUND_REQUEST_ADDITIONS
         request = nonAppBoundRequest;
     }
 
@@ -2020,9 +2005,7 @@ TEST(InAppBrowserPrivacy, RegisterServiceWorkerClientUpdatesAppBoundValue)
     expectedMessage = "starts app-bound";
     receivedMessage = false;
     NSMutableURLRequest *nonAppBoundRequest = [NSMutableURLRequest requestWithURL:[NSURL URLWithString:[NSString stringWithFormat:@"http://127.0.0.1:%d/main.html", server.port()]]];
-    ALLOW_DEPRECATED_DECLARATIONS_BEGIN
-    nonAppBoundRequest._isNonAppInitiated = YES;
-    ALLOW_DEPRECATED_DECLARATIONS_END
+    APP_BOUND_REQUEST_ADDITIONS
 
     [webView2 loadRequest:nonAppBoundRequest];
     TestWebKitAPI::Util::run(&receivedMessage);
