@@ -1,3 +1,15 @@
+2021-06-22  Truitt Savell  <tsavell@apple.com>
+
+        Unreviewed, reverting r279083.
+
+        Broke Mac Builds
+
+        Reverted changeset:
+
+        "Migrate App Privacy Report code from WebKitAdditions"
+        https://bugs.webkit.org/show_bug.cgi?id=227045
+        https://commits.webkit.org/r279083
+
 2021-06-22  Kimmo Kinnunen  <kkinnunen@apple.com>
 
         Functions dispatched to WorkQueue are sometimes destroyed in the calling thread due to block refcounting
